# Deep_Cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  f_timer.c  f_timer.h  file_info.c  file_info.h  file_info_test.cpp  generate_files.c  generate_files.h  lib_file_data_consistent.c  lib_file_data_consistent.h  lib_file_data_parallel.c  lib_file_data_parallel.h  main.c  team_list.c  team_list.h  team_list_test.cpp  team_result.c  team_result.h  test.cpp  timer.c  timer.h  tools.c  tools.h
.build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  file_info_test  main
.build/Testing/Temporary/: CTestCostData.txt
files/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test_files/: 1.txt  3.txt
